--- a/mojo/app/views/prefs/prefs-scene.html
+++ b/mojo/app/views/prefs/prefs-scene.html
@@ -6,6 +6,11 @@
 </div>
 
 <div class="palm-group">
+  <div class="palm-group-title">Paper size series at startup</div>
+  <div x-mojo-element="ListSelector" id="selectStartSeries"></div>
+</div>
+
+<div class="palm-group">
   <div class="palm-group-title">Conversion to pixels</div>
   <div x-mojo-element="ListSelector" id="selectDPI"></div>
 </div>
