--- a/mojo/resources/de_de/views/prefs/prefs-scene.html
+++ b/mojo/resources/de_de/views/prefs/prefs-scene.html
@@ -6,6 +6,11 @@
 </div>
 
 <div class="palm-group">
+  <div class="palm-group-title">Formatreihe beim Start</div>
+  <div x-mojo-element="ListSelector" id="selectStartSeries"></div>
+</div>
+
+<div class="palm-group">
   <div class="palm-group-title">Umrechnung in Pixel</div>
   <div x-mojo-element="ListSelector" id="selectDPI"></div>
 </div>
