--- a/mojo/resources/de_de/views/prefs/prefs-scene.html
+++ b/mojo/resources/de_de/views/prefs/prefs-scene.html
@@ -6,8 +6,15 @@
 </div>
 
 <div class="palm-group">
-  <div class="palm-group-title">Formatreihe beim Start</div>
-  <div x-mojo-element="ListSelector" id="selectStartSeries"></div>
+  <div class="palm-group-title">Beim Start</div>
+  <div class="palm-list">
+    <div class="palm-row first">
+      <div x-mojo-element="ListSelector" id="selectStartSeries"></div>
+    </div>
+    <div class="palm-row last">
+      <div x-mojo-element="ListSelector" id="selectStartUnit"></div>
+    </div>
+  </div>
 </div>
 
 <div class="palm-group">
