TouchPad support: styling.

--- a/mojo/app/views/sizes-list/sizes-list-scene.html
+++ b/mojo/app/views/sizes-list/sizes-list-scene.html
@@ -5,7 +5,7 @@
 
 <!-- List with paper sizes -->
 
-<div class="palm-group unlabeled">
+<div class="palm-group unlabeled" id="_touchpad-group">
   <div class="palm-list">
     <div id="sizes-list" x-mojo-element="List"</div>
   </div>
@@ -15,5 +15,3 @@
 <!-- Scroll fade (only bottom) -->
 
 <div class="scene-fade bottom" x-mojo-scroll-fade="bottom"></div>
-
-
