Placeholder for divider symbol (multiplication sign for sizes, colon for ratio).

--- a/mojo/app/views/sizes-list/listitem.html
+++ b/mojo/app/views/sizes-list/listitem.html
@@ -2,6 +2,6 @@
 <div class="palm-row">
   <div class="palm-row-wrapper">
     <div class="label left">#{dt}</div>
-    <div class="title right">#{width} × #{height}</div>
+    <div class="title right">#{width}#{symbol}#{height}</div>
   </div>
 </div>
