Selector: "show aspect ratio as".

--- a/mojo/app/views/prefs/prefs-scene.html
+++ b/mojo/app/views/prefs/prefs-scene.html
@@ -21,3 +21,8 @@
   <div class="palm-group-title">Conversion to pixels</div>
   <div x-mojo-element="ListSelector" id="selectDPI"></div>
 </div>
+
+<div class="palm-group">
+  <div class="palm-group-title">Aspect ratio</div>
+  <div x-mojo-element="ListSelector" id="selectAspect"></div>
+</div>
