Translation of preferences setting for "show aspect ratio as".

--- a/mojo/resources/de_de/views/prefs/prefs-scene.html
+++ b/mojo/resources/de_de/views/prefs/prefs-scene.html
@@ -21,3 +21,8 @@
   <div class="palm-group-title">Umrechnung in Pixel</div>
   <div x-mojo-element="ListSelector" id="selectDPI"></div>
 </div>
+
+<div class="palm-group">
+  <div class="palm-group-title">Seitenverhältnis</div>
+  <div x-mojo-element="ListSelector" id="selectAspect"></div>
+</div>
