--- a/mojo/app/views/welcome/welcome-scene.html
+++ b/mojo/app/views/welcome/welcome-scene.html
@@ -9,7 +9,7 @@
 
   <div class="palm-header-spacer" style="height: 54px;"></div>
 
-  <div id="data"></div>
+  <div id="data" class="palm-body-text"></div>
 
   <div class="scene-fade bottom" x-mojo-scroll-fade="bottom"></div>
 
