Welcome message now rendered into proper divs.

--- a/mojo/app/views/welcome/welcome-scene.html
+++ b/mojo/app/views/welcome/welcome-scene.html
@@ -9,7 +9,9 @@
 
   <div class="palm-header-spacer" style="height: 54px;"></div>
 
-  <div id="data" class="palm-body-text"></div>
+  <div id="message" class="palm-text-wrapper"></div>
+
+  <div id="changelog"></div>
 
   <div class="scene-fade bottom" x-mojo-scroll-fade="bottom"></div>
 
