Short explanations for DPI and aspect display style.

--- a/mojo/app/views/prefs/prefs-scene.html
+++ b/mojo/app/views/prefs/prefs-scene.html
@@ -21,8 +21,15 @@
   <div class="palm-group-title">Conversion to pixels</div>
   <div x-mojo-element="ListSelector" id="selectDPI"></div>
 </div>
+<div class="palm-info-text">For comparison: 300 and 600 DPI are
+typical printer resolutions, 96 DPI is a common (but by far not the
+only one!) computer screen resolution; the Pre and Pre Plus have 186
+DPI.</div>
 
 <div class="palm-group">
   <div class="palm-group-title">Aspect ratio</div>
   <div x-mojo-element="ListSelector" id="selectAspect"></div>
 </div>
+<div class="palm-info-text">With ratio style, aspect is displayed like
+“1:1.5”, with fraction style like “2:3”.</div>
+
