Short explanations for DPI and aspect display style.

--- a/mojo/resources/de_de/views/prefs/prefs-scene.html
+++ b/mojo/resources/de_de/views/prefs/prefs-scene.html
@@ -21,8 +21,15 @@
   <div class="palm-group-title">Umrechnung in Pixel</div>
   <div x-mojo-element="ListSelector" id="selectDPI"></div>
 </div>
+<div class="palm-info-text">Zum Vergleich: 300 und 600 DPI sind
+typische Auflösungen für Drucker, 96 DPI ist eine übliche (aber bei
+weitem nicht die einzige!) für Computerbildschirme; das Pre und Pre
+Plus haben 186 DPI.</div>
 
 <div class="palm-group">
   <div class="palm-group-title">Seitenverhältnis</div>
   <div x-mojo-element="ListSelector" id="selectAspect"></div>
 </div>
+<div class="palm-info-text">Mit dem Format „Verhältniszahl“ wird das
+Seitenverhältnis in der Art „1:1,5“ angezeigt, mit „Bruch“ in der Art
+„2:3“.</div>
