Info text for "At startup" group.

--- a/mojo/app/views/prefs/prefs-scene.html
+++ b/mojo/app/views/prefs/prefs-scene.html
@@ -16,6 +16,8 @@
     </div>
   </div>
 </div>
+<div class="palm-info-text">Set your favourite format size series and
+length unit here.</div>
 
 <div class="palm-group">
   <div class="palm-group-title">Conversion to pixels</div>
