--- a/mojo/resources/de_de/views/prefs/prefs-scene.html
+++ b/mojo/resources/de_de/views/prefs/prefs-scene.html
@@ -16,6 +16,8 @@
     </div>
   </div>
 </div>
+<div class="palm-info-text">Stellen Sie hier Ihre bevorzugte
+Formatreihe und Längeneinheit ein.</div>
 
 <div class="palm-group">
   <div class="palm-group-title">Umrechnung in Pixel</div>
